--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,11 @@ packages = [{include = "homework_9"}]
 python = "^3.12"
 
 
+[tool.poetry.group.lint.dependencies]
+flake8 = "^7.0.0"
+black = "^24.4.2"
+mypy = "^1.10.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
