--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python = "^3.12"
 flake8 = "^7.0.0"
 black = "^24.4.2"
 mypy = "^1.10.0"
+isort = "^5.13.2"
 
 [build-system]
 requires = ["poetry-core"]
