add new func and tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ packages = [{include = "homework_9"}]
 
 [tool.poetry.dependencies]
 python = "^3.12"
+translate = "^3.6.1"
+python-dotenv = "^1.0.1"
 
 
 [tool.poetry.group.lint.dependencies]
